fixed bug that back button is invisible

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,10 @@ body {
     display: flex;
     align-items: center;
 }
+.navbar-back-button {
+    display: flex;
+    justify-content: flex-end;
+}
 
 .navbar-brand-container a {
     color: var(--mclaren-white);
